--- a/pack/debian/changelog
+++ b/pack/debian/changelog
@@ -1,3 +1,10 @@
+japkatsuyou (2.0.0-3~AnqaFalak~trusty1) trusty; urgency=low
+
+  * Add tatoeba examples
+  * Add more preferences
+
+ -- Abdelkrime Aries <kariminfo0@gmail.com>  Sun, 03 Jul 2016 14:56:48 +0100
+
 japkatsuyou (1.0.1-1) quantal; urgency=low
 
   * English language fix on non-English systems
